--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "@types/node": "^14.14.34",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@zeit/next-sass": "^1.0.1",
+    "bootstrap": "^4.6.0",
+    "connected-react-router": "^6.9.1",
+    "history": "^5.0.0",
     "next": "10.0.8",
+    "node-sass": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-templates": "^0.6.3",
+    "redux": "^4.0.5",
     "typescript": "^4.2.3"
   }
 }
