--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,13 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "baseUrl": "./",
+    "paths": {
+      "@app/*": ["src/components/*"],
+      "@css/*": ["public/assets/css/*"],
+      "@scss/*": ["public/assets/scss/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
