--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.0.8",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
